--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    padding: 0;
+    margin: 0;
+}
+
+.container-fluid {
+    margin-top: 10px;
+}
+
+.mat-card-content {
+    display: flex !important;
+}
+
+.spanmiddle {
+    flex: 1 1 auto;
+}
